--- a/UWFoodServices/project.properties
+++ b/UWFoodServices/project.properties
@@ -14,5 +14,4 @@
 target=Google Inc.:Google APIs:17
 android.library=false
 android.library.reference.1=..\\google-play-services_lib
-android.library.reference.2=..\\library
-android.library.reference.3=../actionbarsherlock
+android.library.reference.2=../library
