--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -60,6 +60,16 @@
             android:label="@string/title_activity_menu_lists"
             android:theme="@android:style/Theme.Holo" >
         </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.SettingsActivityTest"
+            android:label="@string/title_activity_settings"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
     </application>
 
 </manifest>
