--- a/UWFoodServices/project.properties
+++ b/UWFoodServices/project.properties
@@ -11,7 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=Google Inc.:Google APIs:17
+target=android-14
 android.library=false
-android.library.reference.1=..\\google-play-services_lib
-android.library.reference.2=../library
