--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -36,6 +36,7 @@
          android:value="AIzaSyBMWfOa8t5Rd5TBF42TMlndjSpuQG7T21E" />
 
         <activity
+            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.MainScreen"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Holo.NoActionBar" >
@@ -45,27 +46,36 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
         <activity
+            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.RestaurantMenuList"
             android:label="@string/title_activity_restaurant_menu_list"
             android:theme="@android:style/Theme.Holo.NoActionBar" >
         </activity>
+        
         <activity
+            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.LocationHours"
             android:label="@string/title_activity_location_hours" >
         </activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.MenuLists"
             android:label="@string/title_activity_menu_lists"
             android:theme="@android:style/Theme.Holo" >
         </activity>
+        
         <activity
+            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@android:style/Theme.Holo" >
         </activity>
+        
         <activity
+            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.SettingsActivityTest"
             android:label="@string/title_activity_settings"
             android:theme="@android:style/Theme.Holo" >
