--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -30,55 +30,55 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <uses-library android:name="com.google.android.maps" />
-        
+
         <meta-data
-         android:name="com.google.android.maps.v2.API_KEY"
-         android:value="AIzaSyBMWfOa8t5Rd5TBF42TMlndjSpuQG7T21E" />
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBMWfOa8t5Rd5TBF42TMlndjSpuQG7T21E" />
 
         <activity
-            android:screenOrientation="portrait"
             android:name="ca.uwaterloo.uwfoodservices.MainScreen"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Holo.NoActionBar" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.RestaurantMenuList"
+            android:label="@string/title_activity_restaurant_menu_list"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo.NoActionBar" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.LocationHours"
+            android:label="@string/title_activity_location_hours"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.MenuLists"
+            android:label="@string/title_activity_menu_lists"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.SettingsActivityTest"
+            android:label="@string/title_activity_settings"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.SplashScreen"
+            android:label="@string/title_activity_splash_screen"
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        
-        <activity
-            android:screenOrientation="portrait"
-            android:name="ca.uwaterloo.uwfoodservices.RestaurantMenuList"
-            android:label="@string/title_activity_restaurant_menu_list"
-            android:theme="@android:style/Theme.Holo.NoActionBar" >
-        </activity>
-        
-        <activity
-            android:screenOrientation="portrait"
-            android:name="ca.uwaterloo.uwfoodservices.LocationHours"
-            android:label="@string/title_activity_location_hours" >
-        </activity>
-
-        <activity
-            android:screenOrientation="portrait"
-            android:name="ca.uwaterloo.uwfoodservices.MenuLists"
-            android:label="@string/title_activity_menu_lists"
-            android:theme="@android:style/Theme.Holo" >
-        </activity>
-        
-        <activity
-            android:screenOrientation="portrait"
-            android:name="ca.uwaterloo.uwfoodservices.SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:theme="@android:style/Theme.Holo" >
-        </activity>
-        
-        <activity
-            android:screenOrientation="portrait"
-            android:name="ca.uwaterloo.uwfoodservices.SettingsActivityTest"
-            android:label="@string/title_activity_settings"
-            android:theme="@android:style/Theme.Holo" >
         </activity>
     </application>
 
