--- a/UWFoodServices/project.properties
+++ b/UWFoodServices/project.properties
@@ -12,5 +12,7 @@
 
 # Project target.
 target=Google Inc.:Google APIs:17
-android.library.reference.1=../google-play-services_lib
-android.library.reference.2=../library
+android.library.reference.1=..\\google-play-services_lib
+android.library.reference.2=..\\library
+android.library.reference.3=../../workspace/google-play-services_lib
+android.library.reference.4=../../workspace/library
