--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -29,7 +29,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <uses-library android:name="com.google.android.maps" />
 
         <meta-data
@@ -82,6 +81,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.NutritionInfo"
+            android:label="@string/title_activity_nutrition_info" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.MainScreen2"
+            android:label="@string/title_activity_main_screen2" >
         </activity>
     </application>
 
