--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -84,7 +84,8 @@
         </activity>
         <activity
             android:name="ca.uwaterloo.uwfoodservices.MainScreen2"
-            android:label="@string/title_activity_main_screen2" >
+            android:label="@string/title_activity_main_screen2"
+            android:screenOrientation="portrait" >
         </activity>
     </application>
 
