--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -97,7 +97,9 @@
         </activity>
         <activity
             android:name="ca.uwaterloo.uwfoodservices.ProductInfo"
-            android:label="@string/title_activity_product_info" >
+            android:label="@string/title_activity_product_info" 
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Holo" >
         </activity>
     </application>
 
