--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -97,9 +97,14 @@
         </activity>
         <activity
             android:name="ca.uwaterloo.uwfoodservices.ProductInfo"
-            android:label="@string/title_activity_product_info" 
+            android:label="@string/title_activity_product_info"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Holo" >
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity
+            android:name="ca.uwaterloo.uwfoodservices.TabbedDialogActivity"
+            android:label="@string/title_activity_tabbed_dialog" 
+            android:theme="@android:style/Theme.Dialog">
         </activity>
     </application>
 
