--- a/UWFoodServices/AndroidManifest.xml
+++ b/UWFoodServices/AndroidManifest.xml
@@ -28,7 +28,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="ca.uwaterloo.uwfoodservices.InitialiseSingleton" >
+
         <uses-library android:name="com.google.android.maps" />
 
         <meta-data
